unpackaged/main/default/objects/EFH__Enhanced_Field_History__c/EFH__Enhanced_Field_History__c.object-meta.xml
<CustomObject>
    <label>Enhanced Field History</label>
    <nameField>
        <displayFormat>FH-{00000}</displayFormat>
        <label>Field History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enhanced Field Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>