unpackaged/main/default/objects/EFH__Enhanced_Field_History__c/fields/EFH__Data_Type__c.field-meta.xml
<CustomField>
    <fullName>EFH__Data_Type__c</fullName>
    <label>Data Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>