unpackaged/main/default/objects/EFH__Enhanced_Field_History__c/fields/EFH__Modified_By__c.field-meta.xml
<CustomField>
    <fullName>EFH__Modified_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Enhanced_Field_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>