unpackaged/main/default/objects/EFH__Enhanced_Field_History__c/fields/EFH__Modified_Date__c.field-meta.xml
<CustomField>
    <fullName>EFH__Modified_Date__c</fullName>
    <label>Modified Date</label>
    <type>DateTime</type>
</CustomField>