unpackaged/main/default/objects/EFH__Enhanced_Field_History__c/fields/EFH__New_Value__c.field-meta.xml
<CustomField>
    <fullName>EFH__New_Value__c</fullName>
    <label>New Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>