unpackaged/main/default/objects/EFH__Enhanced_Field_History__c/fields/EFH__New_Value_Encrypted_Field__c.field-meta.xml
<CustomField>
    <fullName>EFH__New_Value_Encrypted_Field__c</fullName>
    <label>New Value (Encrypted Field)</label>
    <length>175</length>
    <maskChar>X</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>