unpackaged/main/default/objects/EFH__Enhanced_Field_History__c/fields/EFH__New_Value_Rich_text__c.field-meta.xml
<CustomField>
    <fullName>EFH__New_Value_Rich_text__c</fullName>
    <label>New Value (Rich text)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>