unpackaged/main/default/objects/EFH__Enhanced_Field_History__c/fields/EFH__Object_Name__c.field-meta.xml
<CustomField>
    <fullName>EFH__Object_Name__c</fullName>
    <label>Object Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>