unpackaged/main/default/objects/EFH__Enhanced_Field_History__c/fields/EFH__Original_Value__c.field-meta.xml
<CustomField>
    <fullName>EFH__Original_Value__c</fullName>
    <label>Original Value</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>