unpackaged/main/default/objects/EFH__Enhanced_Field_History__c/fields/EFH__Original_Value_Rich_text__c.field-meta.xml
<CustomField>
    <fullName>EFH__Original_Value_Rich_text__c</fullName>
    <label>Original Value (Rich text)</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>