unpackaged/main/default/objects/EFH__Enhanced_Field_History__c/fields/EFH__Record_Id__c.field-meta.xml
<CustomField>
    <fullName>EFH__Record_Id__c</fullName>
    <externalId>true</externalId>
    <label>Record Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>