unpackaged/main/default/objects/EFH__Enhanced_Field_History__c/listViews/EFH__All.listView-meta.xml
<ListView>
    <fullName>EFH__All</fullName>
    <columns>NAME</columns>
    <columns>EFH__Field_Name__c</columns>
    <columns>EFH__New_Value__c</columns>
    <columns>EFH__Original_Value__c</columns>
    <columns>EFH__Record_Id__c</columns>
    <columns>EFH__Field_API_Name__c</columns>
    <columns>EFH__Object_Name__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>